# QRobotSutdio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh_CN.md  config.h.in  winicon.rc.in
.github/ISSUE_TEMPLATE/: issue-template.md
config/: general.json.in
modules/ExtraUtils/: CMakeLists.txt
modules/ExtraUtils/src/: utils.cpp  utils.h
qml/: Main.qml
qml/components/: AppHeader.qml  AppIcons.qml  AppMenuDrawer.qml  Content.qml  IconButton.qml  IconFont.qml  IconSvg.qml  M3Extra.qml  NavigationBar.qml  NavigationDrawer.qml  NavigationRail.qml
qml/components/ApplicationLayout/: AppMenuDrawer.qml  Content.qml  NavigationDrawer.qml
qml/components/MotionControlPage/: AngleAccPanel.qml  ControlButtonsPanel.qml  MotionControlPanel.qml  Robot3DView.qml  RobotJointPanel.qml  RobotPositionInfoPanel.qml  RobotRotationPanel.qml  RobotStatusPanel.qml  RobotTCPPanel.qml  RobotVelocityPanel.qml  VelocityPanel.qml  XYZRPYPanel.qml
qml/components/SettingsPage/: GeneralSettings.qml
qml/pages/: AboutPage.qml  HomePage.qml  MotionControlPage.qml  SettingsPage.qml
scripts/: ScreenUtils.js
src/: main.cpp  utils.cpp  utils.h
